fixed button interactions, aligned add domain/user buttons

--- a/src/components/addDomainModal/addDomainModal.scss
+++ b/src/components/addDomainModal/addDomainModal.scss
@@ -19,7 +19,7 @@
   font-size: 14px;
 }
 
-.forma button {
+/* .forma button {
   font-family: $fnt-mpr !important;
   text-transform: uppercase;
   outline: 0;
@@ -30,11 +30,12 @@
   color: $clr-white !important;
   font-size: 14px;
 
-}
+} */
 
-.forma button:hover,.forma button:active,.forma button:focus {
+
+/* .forma button:hover,.forma button:active,.forma button:focus {
   background-color: mix($clr-black, $clr-hero, 10%) !important;
-}
+} */
 .forma .message {
   margin: 15px 0 0;
   color: #b3b3b3;
@@ -132,7 +133,7 @@ label.checkboxTitle2 {
   background: $clr-hero !important;
   border: 0;
   padding: 10px;
-  margin: 5px;
+  margin: 5px 5px 5px 0;
   color: #FFFFFF;
   font-size: 14px;
 
@@ -148,6 +149,6 @@ label.checkboxTitle2 {
 
 }
 
-.modal-dialog {
+/* .modal-dialog {
   max-width: 33% !important;
-}
+} */
