--- a/src/components/editDomainModal/editDomainModal.scss
+++ b/src/components/editDomainModal/editDomainModal.scss
@@ -25,12 +25,20 @@
   outline: 0;
   background: $clr-caerul !important;
   border: 0;
+  width: 30%;
   padding: 10px;
   margin: 5px;
   color: #FFFFFF;
   font-size: 14px;
+  &:hover {
+    background-color: mix($clr-black, $clr-hero, 10%) !important;
+    color: mix($clr-black, $clr-white, 10%) !important;
+  }
 
-  
+  &:active {
+    background-color: mix($clr-black, $clr-hero, 20%) !important;
+    color: mix($clr-black, $clr-white, 20%) !important;
+  }
 
 }
 
@@ -73,6 +81,9 @@
   color: $clr-caerul;
 }
 
+/* THIS IS INHERITED TO ALL MODALS, DON'T DUPLICATE TO OTHER SCSS FILES*/
 .modal-dialog{
   max-width: 33%;
 }
+
+/* MEDIA QUERIES, THESE ARE INHERITED AS WELL FOR MODALS*/
